--- a/stacks/wordpress/docker-compose.yml
+++ b/stacks/wordpress/docker-compose.yml
@@ -15,7 +15,7 @@ services:
    wordpress:
      image: wordpress:latest
      ports:
-       - 80
+       - "${HOSTPORT}:${CONTAINERPORT}"
      restart: always
      environment:
        WORDPRESS_DB_HOST: db:3306
